# dgl

./: .gitignore  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  letters.py  photos.py  quotes.py  timeline.py
backend/app/services/: email_service.py  scheduler.py
backend/app/templates/: letter_email.html
backend/data/: dgl.db
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/effects/: AmbientToggle.tsx  FloatingPetals.tsx  OrnateFlourish.tsx  WaxSeal.tsx
frontend/src/components/layout/: Footer.tsx  GlassCard.tsx  Navbar.tsx  PageHeader.tsx  ScrollProgress.tsx
frontend/src/components/letter/: CountdownTimer.tsx  EnvelopeAnimation.tsx  LetterArchive.tsx  LetterComposer.tsx
frontend/src/components/photos/: PasswordGate.tsx  PhotoUpload.tsx  PolaroidCard.tsx  PolaroidGallery.tsx
frontend/src/components/quotes/: QuoteCard.tsx  QuotesCarousel.tsx
frontend/src/context/: ThemeContext.tsx
frontend/src/data/: quotes.ts
frontend/src/hooks/: useScrollAnimation.ts  useTypewriter.ts
frontend/src/lib/: api.ts
frontend/src/pages/: ArchivePage.tsx  HomePage.tsx  MemoriesPage.tsx  TimelinePage.tsx  WriteLetterPage.tsx
nginx/: dgl.conf
